build(foundry): update profile & ensure optimizer disabled
suggested toml config for downstream users:

```toml

memory_limit = 33554432
fuzz_max_global_rejects = 65_536
fuzz_max_local_rejects = 16_384
fuzz_runs = 512

ignored_error_codes = [
  1878,
  2018,
  3420,
  3716,
]

cache = true
cache_path = 'cache'
evm_version = 'london'
```

--- a/foundry.toml
+++ b/foundry.toml
@@ -1,6 +1,6 @@
 # Full reference https://github.com/foundry-rs/foundry/tree/master/config
 
-[default]
+[profile.default]
 auto_detect_solc = false
 fuzz_runs = 256
 libs = ["lib"]
