--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,7 +31,7 @@ jobs:
           cache: "yarn"
           node-version: "16"
 
-      - name: "Install the Node.Js dependencies"
+      - name: "Install the Node.js dependencies"
         run: "yarn install --immutable"
 
       - name: "Lint the contracts"
@@ -39,7 +39,7 @@ jobs:
 
       - name: "Add lint summary"
         run: |
-          echo "## Lint results" >> $GITHUB_STEP_SUMMARY
+          echo "## Lint" >> $GITHUB_STEP_SUMMARY
           echo "✅ Passed" >> $GITHUB_STEP_SUMMARY
 
       - name: "Show the Foundry config"
@@ -55,5 +55,5 @@ jobs:
 
       - name: "Add test summary"
         run: |
-          echo "## Test results" >> $GITHUB_STEP_SUMMARY
+          echo "## Tests" >> $GITHUB_STEP_SUMMARY
           echo "✅ Passed" >> $GITHUB_STEP_SUMMARY
