--- a/.editorconfig
+++ b/.editorconfig
@@ -12,7 +12,7 @@ indent_style = space
 insert_final_newline = true
 trim_trailing_whitespace = true
 
-[*.{sol,toml}]
+[*.{sol}]
 indent_size = 4
 
 [*.tree]
