--- a/package.json
+++ b/package.json
@@ -53,6 +53,6 @@
     "prepublishOnly": "pinst --disable",
     "prettier": "prettier --config \"./.prettierrc.yml\" --write \"**/*.{json,md,sol,yml}\"",
     "prettier:check": "prettier --config \"./.prettierrc.yml\" --check \"**/*.{json,md,sol,yml}\"",
-    "solhint": "solhint --config ./.solhint.json \"{src,test}/**/*.sol\""
+    "solhint": "solhint --config \"./.solhint.json\" \"{src,test}/**/*.sol\""
   }
 }
