chore: simplify scripts in "package.json"

--- a/package.json
+++ b/package.json
@@ -46,13 +46,11 @@
     "url": "https://github.com/paulrberg/prb-test"
   },
   "scripts": {
-    "lint": "yarn solhint && yarn prettier:check",
-    "lint:check": "yarn prettier:check && yarn solhint:check",
+    "lint": "solhint \"{src,test}/**/*.sol\"",
     "postinstall": "husky install",
     "postpublish": "pinst --enable",
     "prepublishOnly": "pinst --disable",
-    "prettier": "prettier --config \"./.prettierrc.yml\" --write \"**/*.{json,md,sol,yml}\"",
-    "prettier:check": "prettier --config \"./.prettierrc.yml\" --check \"**/*.{json,md,sol,yml}\"",
-    "solhint": "solhint --config \"./.solhint.json\" \"{src,test}/**/*.sol\""
+    "prettier": "prettier --write \"**/*.{json,md,sol,yml}\"",
+    "prettier:check": "prettier --check \"**/*.{json,md,sol,yml}\""
   }
 }
