--- a/package.json
+++ b/package.json
@@ -46,6 +46,9 @@
     "type": "git",
     "url": "https://github.com/paulrberg/prb-test"
   },
+  "resolutions": {
+    "solhint/@solidity-parser/parser": "^0.14.5"
+  },
   "scripts": {
     "clean": "rimraf cache out",
     "lint": "yarn lint:sol && yarn prettier:check",
