chore: rename script to "prettier:write"

--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "postinstall": "husky install",
     "postpublish": "pinst --enable",
     "prepublishOnly": "pinst --disable",
-    "prettier": "prettier --write \"**/*.{json,md,sol,yml}\"",
-    "prettier:check": "prettier --check \"**/*.{json,md,sol,yml}\""
+    "prettier:check": "prettier --check \"**/*.{json,md,sol,yml}\"",
+    "prettier:write": "prettier --write \"**/*.{json,md,sol,yml}\""
   }
 }
