--- a/.prettierrc.yml
+++ b/.prettierrc.yml
@@ -7,7 +7,7 @@ trailingComma: "all"
 useTabs: false
 
 overrides:
-  - files: ["*.sol"]
+  - files: "*.sol"
     options:
       compiler: "0.8.17"
       tabWidth: 4
