--- a/package.json
+++ b/package.json
@@ -10,15 +10,15 @@
     "url": "https://github.com/paulrberg/prb-test/issues"
   },
   "devDependencies": {
-    "@commitlint/cli": "^17.1.2",
-    "@commitlint/config-conventional": "^17.1.0",
+    "@commitlint/cli": "^17.3.0",
+    "@commitlint/config-conventional": "^17.3.0",
     "commitizen": "^4.2.5",
     "cz-conventional-changelog": "^3.3.0",
-    "husky": "^8.0.1",
-    "lint-staged": "^13.0.3",
+    "husky": "^8.0.2",
+    "lint-staged": "^13.0.4",
     "pinst": "^3.0.0",
-    "prettier": "^2.7.1",
-    "prettier-plugin-solidity": "^1.0.0-dev.22",
+    "prettier": "^2.8.0",
+    "prettier-plugin-solidity": "^1.0.0",
     "rimraf": "^3.0.2",
     "solhint": "^3.3.7",
     "solhint-plugin-prettier": "^0.0.5"
