test: improve test contract names
test: add "lite" profile for testing locally

--- a/foundry.toml
+++ b/foundry.toml
@@ -15,6 +15,9 @@
   max_test_rejects = 100_000
   runs = 256
 
+[profile.lite.fuzz]
+  runs = 50
+
 [profile.ci]
   fuzz = { runs = 1_000 }
   verbosity = 4
