--- a/foundry.toml
+++ b/foundry.toml
@@ -12,8 +12,8 @@
   verbosity = 2
 
 [profile.default.fuzz]
-  max_test_rejects = 100_000
-  runs = 256
+  max_test_rejects = 100_000 # Number of times `vm.assume` can fail
+  runs = 100
 
 [profile.lite.fuzz]
   runs = 50
