--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
   },
   "devDependencies": {
     "prettier": "^2.8.4",
-    "rimraf": "^4.4.0",
     "solhint": "^3.4.1"
   },
   "files": [
@@ -37,7 +36,7 @@
     "url": "https://github.com/PaulRBerg/prb-test"
   },
   "scripts": {
-    "clean": "rimraf cache out",
+    "clean": "rm -rf cache out",
     "lint": "pnpm lint:sol && pnpm prettier:check",
     "lint:sol": "forge fmt --check && pnpm solhint \"{script,src,test}/**/*.sol\"",
     "prettier:check": "prettier --check \"**/*.{json,md,yml}\"",
