--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -1,14 +1,14 @@
-name: "Sync Release Branch"
+name: "Sync"
 
 on:
-  release:
-    types:
-      - "created"
+  push:
+    tags:
+      - "v0.*"
 
 jobs:
   sync-release-branch:
     runs-on: "ubuntu-latest"
-    if: "startsWith(github.event.release.tag_name, 'v0')"
+    if: "startsWith(github.ref, 'refs/tags/v0.')"
     steps:
       - name: "Check out the repo"
         uses: "actions/checkout@v3"
