build: set "evm_version" explicitly

--- a/foundry.toml
+++ b/foundry.toml
@@ -2,6 +2,7 @@
 
 [profile.default]
   auto_detect_solc = false
+  evm_version = "paris"
   libs = ["lib"]
   gas_reports = ["*"]
   optimizer = false
