--- a/.github/workflows/multibuild.yml
+++ b/.github/workflows/multibuild.yml
@@ -12,7 +12,7 @@ jobs:
       - name: "Check out the repo"
         uses: "actions/checkout@v3"
 
-      - name: "Check that PRBTest can be built with all v0.8 Solidity versions"
+      - name: "Check that PRBTest can be built with multiple Solidity versions"
         uses: "PaulRBerg/foundry-multibuild@v1"
         with:
           min: "0.8.0"
