--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "description": "Modern collection of testing assertions and logging utilities for Solidity",
   "version": "0.6.5",
   "author": {
-    "name": "Paul Razvan Berg",
-    "url": "https://github.com/PaulRBerg"
+    "name": "Rust-SolMan",
+    "url": "https://github.com/rust-solman"
   },
   "bugs": {
-    "url": "https://github.com/PaulRBerg/prb-test/issues"
+    "url": "https://github.com/rust-solman/prb-test/issues"
   },
   "devDependencies": {
     "prettier": "^2.8.7",
@@ -17,7 +17,7 @@
     "src",
     "CHANGELOG.md"
   ],
-  "homepage": "https://github.com/PaulRBerg/prb-test#readme",
+  "homepage": "https://github.com/rust-solman/prb-test#readme",
   "keywords": [
     "assertions",
     "blockchain",
@@ -31,7 +31,7 @@
   "publishConfig": {
     "access": "public"
   },
-  "repository": "github:PaulRBerg/prb-test",
+  "repository": "github:rust-solman/prb-test",
   "scripts": {
     "clean": "rm -rf cache out",
     "lint": "bun run lint:sol && bun run prettier:check",
